--- a/Ball_Games_WindowsFormsApp/Ball_Games_WindowsFormsApp.csproj
+++ b/Ball_Games_WindowsFormsApp/Ball_Games_WindowsFormsApp.csproj
@@ -46,10 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ball.cs" />
-    <Compile Include="BallRandom.cs" />
-    <Compile Include="BallRandomMouseClick.cs" />
-    <Compile Include="BallRandomSizable.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BallClass\Ball_Class.csproj">
+      <Project>{32461963-67EF-4C16-8162-30B0C4BDB042}</Project>
+      <Name>Ball_Class</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
