--- a/BallClass/Ball_Class.csproj
+++ b/BallClass/Ball_Class.csproj
@@ -48,8 +48,11 @@
     <Compile Include="BallRandomMouseClick.cs" />
     <Compile Include="BallRandomSizable.cs" />
     <Compile Include="BylliardBall.cs" />
+    <Compile Include="Diffusion.cs" />
+    <Compile Include="HitEventArgs.cs" />
     <Compile Include="MoveBall.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Side.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
