Реализована база игры: шары вылетают, падают, движением мыши "режутся" - исчезают.

--- a/BallClass/Ball_Class.csproj
+++ b/BallClass/Ball_Class.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BallRandom.cs" />
     <Compile Include="BallRandomMouseClick.cs" />
     <Compile Include="BallRandomSizable.cs" />
+    <Compile Include="BallSalut.cs" />
     <Compile Include="BylliardBall.cs" />
     <Compile Include="Diffusion.cs" />
     <Compile Include="HitEventArgs.cs" />
