БАНАН! Шарик желтого цвета. При соприкосновении с ним шарики двигаются и вылетают медленнее на некоторое время. Соответственно ловить их легче.

--- a/Salut_WindowsFormsApp/Salut_WindowsFormsApp.csproj
+++ b/Salut_WindowsFormsApp/Salut_WindowsFormsApp.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BallSalut.cs" />
+    <Compile Include="BallSalutStart.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +58,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TopReachedEventArgs.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
